--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -100,28 +100,34 @@ div.general-container h2{
 /*Main CSS --> Presentation title*/
 
 .presentation{
-    width: 100%;
-    height: 350px;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
 }
-.presentation-img{
-    position: absolute;
+.presentation-division{
+    position: relative;
     width: 50%;
-    height: 100px;
-    align-items: center;
+    height: 300px;
 }
+
 .img-diagonal-lines{
     position: absolute;
     width: 165px;
     height: 154px;
     right: 133px;
-    top: 0px;
-    /*background: url(Sin título-2-01.png);*/
+    top: 1%;
+    background-image: url('../img/img-diagonal-lines.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
 }
 .img-main{
     position: absolute;
+    background-image: url('../img/img-main.png');
     width: 225px;
     height: 245px;
-    right: 20px;
+    right: 2%;
     top: 44px;
 
     /*background: url(964a9c5ac9933cc012d0bd80be.jpg);
@@ -130,11 +136,8 @@ div.general-container h2{
     border-radius: 30px;*/
     }
 .presentation-title{
-    position: absolute;
-    width: 50%;
-    height: 100px;
     right: 0px;
-    top: 50px;
+    top: 10%;
 }
 div.presentation-title h1{
     font-weight: bold;
@@ -152,7 +155,7 @@ div.presentation-title h1{
 }
 .about-title{
     width: 100%;
-    position: relative;
+    position: relative;    
 }
 .about-text{
     width: 70%;
@@ -174,7 +177,7 @@ div.about-text p{
     top: 40%;
 }
 .about-line{
-    top: 20px;
+    top: 50%;
     left: 190px;
 }
 
@@ -194,6 +197,8 @@ div.about-text p{
     width: 90%;
     margin: auto;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
 }
 .img-top{
     position: absolute;
@@ -206,7 +211,7 @@ div.about-text p{
     right: 1%;
 }
 .project-box{
-    display: inline-block;
+    /* display: inline-block; */
     margin: 1%;
     width: 300px;
     height: 190px;
@@ -252,18 +257,21 @@ div.project-box a:hover{
 /*Main CSS --> Blogs*/
 .blog-title{
     text-align: left;
+    position: relative;
 }
 .blog-line{
-    top: 20px;
-    left: 190px;
+    top: 50%;
+    left: 130px;
 }
 .blog-boxes{
     width: 90%;
     margin: auto;
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
 }
 .blog-box{
-    display: inline-block;
+    /* display: inline-block; */
     margin: 1%;
     width: 390px;
     height: 165px;
@@ -281,6 +289,9 @@ div.project-box a:hover{
 .skills-line{
     top: 50px;
     right: 46%;
+}
+div.skills-img img{
+    margin: 2%;
 }
 /*Footer CSS*/
 .footer-msj{
