--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,10 @@
 
 /* Color variables */
 :root {
-  --css-light-color: #f3f2f5;
-  --css-bright-color: #8567a3;
   --css-dark-color: #333233;
+  --css-medium-color: #c9c8ca;
+  --css-light-color: #f3f2f5;
+  --css-bright-color: #8541a5;
 }
 
 /* General */
@@ -12,7 +13,9 @@ body {
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  font-size: large;
   letter-spacing: 0.01em;
+  line-height: 2em;
   margin: 0;
 }
 
@@ -98,6 +101,75 @@ body {
   padding-top: 5em;
   width: 80%;
   margin: 0 auto;
+  max-width: 1080px;
+}
+
+/* Section: About me */
+.about-presentation {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.about-presentation h1 {
+  font-weight: bold;
+  font-size: x-large;
+}
+.about-presentation span {
+  color: var(--css-bright-color);
+}
+.about-img {
+  margin: 1.5em;
+  background-image: url("../img/img-main-yo.jpg");
+  width: 225px;
+  height: 245px;
+  border: 0.3em solid var(--css-bright-color);
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-size: 225px 245px;
+  border-radius: 2em;
+}
+.main-title {
+  width: 100%;
+  text-align: center;
+}
+.main-title h2 {
+  margin: 1.5em 0 0.3em 0;
+}
+.about-text span {
+  background: white;
+  box-shadow: 0px 4px 6px 1px var(--css-light-color);
+  border-radius: 25px;
+  padding: 0.5%;
+}
+.about-text img {
+  position: relative;
+  top: 7px;
+}
+.about-habilities {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.about-habily {
+  background-color: var(--css-medium-color);
+  width: 9em;
+  height: 9em;
+  border-radius: 1.5em;
+  margin: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1em;
+}
+@media only screen and (min-width: 700px) {
+  .about-presentation h1 {
+    font-size: xx-large;
+  }
 }
 
 /* Footer */
