--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ span {
   left: 0;
   right: 0;
   top: 0;
+  z-index: 1;
 }
 .header-container {
   width: 90%;
@@ -53,13 +54,14 @@ span {
   padding-right: 0;
   width: 100%;
 }
-.header-nav-div-item {
+.header-nav-item {
   display: block;
   padding: 1.5em 1em;
   transition: all 0.3s linear;
   width: 100%;
+  text-decoration-line: none;
 }
-.header-nav-div-item:hover {
+.header-nav-item:hover {
   color: var(--css-bright-color);
   font-weight: bold;
 }
@@ -90,7 +92,7 @@ span {
   .header-logo {
     width: 30%;
   }
-  .header-nav-div-item {
+  .header-nav-item {
     display: inline-block;
     padding: 1.5em 1em;
     transition: all 0.3s linear;
@@ -204,7 +206,6 @@ span {
   border-radius: 1.5em;
   padding: 2%;
   position: relative;
-  z-index: -1;
 }
 div.project-box h3 {
   font-size: 20px;
@@ -245,7 +246,6 @@ div.project-box a {
   background: #ffffff;
   padding: 2%;
   position: relative;
-  z-index: -1;
 }
 /* Footer */
 
